:recycle: refactor: 예약 조회 기능 리펙토링